--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
-*.html
-ads.txt
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+moc*.cpp
+*.obj
+
+Makefile*
+*.exe
+
+*.user*
+
+*.*ebug
+*.*lease
+*.user
+
+/gen/
+/old*/
+/*build*/
